# verses

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: showcase.tape
src/: config.example.toml  config.rs  event.rs  main.rs  oauth.rs  verses.rs
src/verses/: handler.rs  tui.rs  tui_backend.rs
