[package]
name = "verses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
flume = "0.11.0"
home = "0.5.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
reqwest = { version = "0.11.20", features = ["rustls"] }
rspotify = { version = "0.12.0", features = ["reqwest-rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
webbrowser = "0.8.11"
