[package]
name = "verses"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
categories = ["api-bindings", "command-line-utilities"]
keywords = ["Spotify", "lyrics", "TUI"]
authors = ["Maxuss <maxus.info.mail@proton.me>"]
description = "TUI for viewing synchronized Spotify lyrics"
repository = "https://github.com/Maxuss/chatgpt_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
deunicode = "1.3.3"
flume = "0.11.0"
handlebars = { version = "4.4.0", features = ["no_logging"] }
home = "0.5.5"
lazy_static = "1.4.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["rustls"] }
rspotify = { version = "0.12.0", features = ["reqwest-rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.7.6"
webbrowser = "0.8.11"
